# bazel-ansible

./: .bazel_fix_commands.json  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements_lock.txt  requirements_windows.txt
.github/: cspell.yaml  renovate.json
cli/ansible/: BUILD.bazel  ansible.py
lib/docker/: Dockerfile  dockerbuild
lib/python/: BUILD.bazel  __main__.py  __test__.py  gazelle_python.yaml  requirements.in  requirements_lock.txt
