# This file replaces the WORKSPACE file when using bzlmod.

module(
    name = "bazel-ansible",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.0.0")
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "bazel_gazelle")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//lib/python:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
