module(
    name = "bazel-ansible",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.55.0")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.4.1")
bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.4")



python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//lib/python:requirements_lock.txt",
    requirements_windows = "//lib/python:requirements_windows.txt",
)

use_repo(pip, "pip")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.1", dev_dependency = True)
